Crash when using switch mode (transfer mode) on empty space #115704

Closed
opened 2023-12-02 12:32:31 +01:00 by Sun Kim · 2 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-02 04:42, hash: 7aa3d967bab6
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-28 01:35, hash: 1e84a028b398
Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-18 21:46, hash: 9eba3902c904

Caused by something between 9eba3902c904 and 1e84a028b398

Short description of error
Blender crashes when using Transfer Mode (Alt + Q) on empty space.

Stack trace:
blender.exe         :0x00007FF7C7D83490  object_transfer_mode_invoke
blender.exe         :0x00007FF7C7296BE0  wm_operator_invoke
blender.exe         :0x00007FF7C7293D70  wm_handler_operator_call
blender.exe         :0x00007FF7C7295CC0  wm_handlers_do_keymap_with_keymap_handler
blender.exe         :0x00007FF7C7295280  wm_handlers_do_intern
blender.exe         :0x00007FF7C7294470  wm_handlers_do
blender.exe         :0x00007FF7C7290D80  wm_event_do_handlers
blender.exe         :0x00007FF7C7275EF0  WM_main

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-02 04:42, hash: `7aa3d967bab6` Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-28 01:35, hash: `1e84a028b398` Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-18 21:46, hash: `9eba3902c904` Caused by something between `9eba3902c904` and `1e84a028b398` **Short description of error** Blender crashes when using Transfer Mode (Alt + Q) on empty space. ``` Stack trace: blender.exe :0x00007FF7C7D83490 object_transfer_mode_invoke blender.exe :0x00007FF7C7296BE0 wm_operator_invoke blender.exe :0x00007FF7C7293D70 wm_handler_operator_call blender.exe :0x00007FF7C7295CC0 wm_handlers_do_keymap_with_keymap_handler blender.exe :0x00007FF7C7295280 wm_handlers_do_intern blender.exe :0x00007FF7C7294470 wm_handlers_do blender.exe :0x00007FF7C7290D80 wm_event_do_handlers blender.exe :0x00007FF7C7275EF0 WM_main ``` <video src="/attachments/4d8e693c-6160-4035-9efd-ce96cc640b44" title="crash_on_transfer.mp4" controls></video>
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-02 12:32:32 +01:00

Confirmed with a slightly older build as well.

Confirmed with a slightly older build as well.
Jesse Yurkovich added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-12-02 21:40:34 +01:00

@PratikPB2123 Seems like a7ae024ea3 caused it. base_dst can be null when there's nothing under the cursor.

@PratikPB2123 Seems like a7ae024ea35 caused it. `base_dst` can be null when there's nothing under the cursor.
Pratik Borhade self-assigned this 2023-12-04 03:47:18 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-04 13:07:10 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-12-11 16:00:55 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115704
No description provided.