Fix #115704: Crash when using transfer mode on empty space

Caused by missing null check in a7ae024ea35

Pull Request: https://projects.blender.org/blender/blender/pulls/115753